Fix - Links on new tab

--- a/universities.html
+++ b/universities.html
@@ -210,13 +210,13 @@
             <div class="admissiontext">
                 <h3>Apply to Grenoble Ecole de Management</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at Grenoble Ecole de Management as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
-                <a href="https://en.grenoble-em.com/"><button class="programbtn">Read about university</button></a>
+                <a href="https://en.grenoble-em.com/" target="_blank"><button class="programbtn">Read about university</button></a>
             </div>
 
             <div class="countrytext">
                 <h3>Get to know France</h3>
                 <p>Study in one of the world's best universities and colleges while exploring the rich culture of France. Are you ready for an experience of a lifetime?</p>
-                <a href="https://www.france.fr/en"><button class="programbtn">Learn more</button></a>
+                <a href="https://www.france.fr/en" target="_blank"><button class="programbtn">Learn more</button></a>
             </div>
 
             <div class="countryimage">
@@ -368,13 +368,13 @@
             <div class="admissiontext">
                 <h3>Apply to ESC Clermont Business School</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at ESC Clermont Business School as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
-                <a href="https://en.grenoble-em.com/"><button class="programbtn">Read about university</button></a>
+                <a href="https://en.grenoble-em.com/" target="_blank"><button class="programbtn">Read about university</button></a>
             </div>
 
             <div class="countrytext">
                 <h3>Get to know France</h3>
                 <p>Study in one of the world's best universities and colleges while exploring the rich culture of France. Are you ready for an experience of a lifetime?</p>
-                <a href="https://www.france.fr/en"><button class="programbtn">Learn more</button></a>
+                <a href="https://www.france.fr/en" target="_blank"><button class="programbtn">Learn more</button></a>
             </div>
 
             <div class="countryimage">
@@ -514,13 +514,13 @@
             <div class="admissiontext">
                 <h3>Apply to MBS - Montpeiller Business School</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at MBS - Montpeiller Business School as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
-                <a href="https://www.montpellier-bs.com/international/"><button class="programbtn">Read about university</button></a>
+                <a href="https://www.montpellier-bs.com/international/" target="_blank"><button class="programbtn">Read about university</button></a>
             </div>
 
             <div class="countrytext">
                 <h3>Get to know France</h3>
                 <p>Study in one of the world's best universities and colleges while exploring the rich culture of France. Are you ready for an experience of a lifetime?</p>
-                <a href="https://www.france.fr/en"><button class="programbtn">Learn more</button></a>
+                <a href="https://www.france.fr/en" target="_blank"><button class="programbtn">Learn more</button></a>
             </div>
 
             <div class="countryimage">
@@ -660,13 +660,13 @@
             <div class="admissiontext">
                 <h3>Apply to Paris American Academy</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at Paris American Academy as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
-                <a href="https://www.parisamericanacademy.fr/"><button class="programbtn">Read about university</button></a>
+                <a href="https://www.parisamericanacademy.fr/" target="_blank"><button class="programbtn">Read about university</button></a>
             </div>
 
             <div class="countrytext">
                 <h3>Get to know France</h3>
                 <p>Study in one of the world's best universities and colleges while exploring the rich culture of France. Are you ready for an experience of a lifetime?</p>
-                <a href="https://www.france.fr/en"><button class="programbtn">Learn more</button></a>
+                <a href="https://www.france.fr/en" target="_blank"><button class="programbtn">Learn more</button></a>
             </div>
 
             <div class="countryimage">
@@ -814,13 +814,13 @@
                     <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at
                         Paris School of Business as part of an exchange program. Please get in touch with us if you
                         have questions, and we can give you advice on an individual basis.</p>
-                    <a href="https://www.psbedu.paris/en"><button class="programbtn">Read about university</button></a>
+                    <a href="https://www.psbedu.paris/en" target="_blank"><button class="programbtn">Read about university</button></a>
                 </div>
 
                 <div class="countrytext">
                     <h3>Get to know France</h3>
                     <p>Study in one of the world's best universities and colleges while exploring the rich culture of France. Are you ready for an experience of a lifetime?</p>
-                    <a href="https://www.france.fr/en"><button class="programbtn">Learn more</button></a>
+                    <a href="https://www.france.fr/en" target="_blank"><button class="programbtn">Learn more</button></a>
                 </div>
 
                 <div class="countryimage">
