--- a/universities.html
+++ b/universities.html
@@ -69,9 +69,12 @@
                 till the end, with all the requirements you might need for filling university application, accomodation
                 and visa.</p>
 
-                <button class="buttonStyle1" onclick="document.getElementById('form-page').scrollIntoView();"><i
+                <a href="Contact-us.html">
+                <button class="buttonStyle1" oj><i
                         class="fas fa-phone-alt"></i>Contact Us</button>
-        </section>
+                </a>
+                
+            </section>
 
         <div class="university-intro-img">
             <img src="assets/images/university-image.png" alt=university-picture>
