update text-contact us

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -63,10 +63,10 @@
 
             <section class="contact-intro">
                 <h3>CONTACT US</h3>
-                <p>Our Service provide all needed step to be accepted to the university.
-                    We will help you from the begging till the end, with all the
-                    requirements you might need for filling university application,
-                    accomodation and visa.</p>
+                <p>Feel free to contact us if you have any questions! We have a 
+                    helpful and prestisiouse team ready to help and to clarify anything you want!
+                    We are here to help you to find the best solutions for you and for your future. 
+                    </p>
 
                 <button class="buttonStyle1" onclick="document.getElementById('form-page').scrollIntoView();"><i
                         class="fas fa-phone-alt"></i>Contact Us</button>
