--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
   <link href="assets/CSS/style-index.css" rel=" stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <script src="assets/js/Javascript.js" defer></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
@@ -62,8 +66,8 @@
 
   <div class="landing-img-grid">
     <div class="scroll">
-      <img id="car" src="assets/images/landing/car.png">
-      <img id="plane" src="assets/images/landing/plane.png">
+      <img id="car" src="assets/images/landing/car.png" alt="Your car going to France">
+      <img id="plane" src="assets/images/landing/plane.png" alt="Your plane to France">
     </div>
     <img class="mainimg" src="assets/images/landing/landing-img.png" alt=LandingImg>
 
@@ -135,36 +139,36 @@
     <section class="steps">
 
 
-      <img src="assets/images/landing/1.png">
+      <img src="assets/images/landing/1.png" alt="1">
       <p>First of all, you will contact us and we will make
         a call and appointment for further guideline</p>
-      <img src="assets/images/landing/2.png">
+      <img src="assets/images/landing/2.png" alt="2">
       <p>During a meeting, we will discuss your
         options and study programs you prefer</p>
-      <img src="assets/images/landing/3.png">
+      <img src="assets/images/landing/3.png" alt="3">
       <p>We will provide Personal Traits Test,
         which will help to decided easier.</p>
-      <img src="assets/images/landing/4.png">
+      <img src="assets/images/landing/4.png" alt="4">
       <p>We will help you to find the best program
         and university according your needs</p>
-      <img src="assets/images/landing/5.png">
+      <img src="assets/images/landing/5.png" alt="5">
       <p>Our service include filling in
         all documentation for university</p>
-      <img src="assets/images/landing/6.png">
+      <img src="assets/images/landing/6.png" alt="6">
 
       <p>Visa Application</p>
-      <img src="assets/images/landing/7.png">
+      <img src="assets/images/landing/7.png" alt="7">
 
       <p>Will help you in finding the right
         accommodation</p>
-      <img src="assets/images/landing/8.png">
+      <img src="assets/images/landing/8.png" alt="8">
       <p>We communicate with university so you
         will get every news about your application</p>
 
 
 
     </section>
-    <img class="showcase" id="image" src="assets/images/showcase1.png">
+    <img class="showcase" id="image" src="assets/images/showcase1.png" alt="Student Life">
 
     <script type="text/javascript">
       var image = document.getElementById("image");
@@ -208,11 +212,11 @@
       <div class="headline_uni">
         <h2>Partner Universities</h2>
       </div>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/GEM.png"></a>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/ESC.png"></a>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/MBS.png"></a>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PAA.png"></a>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PSB.png"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/GEM.png" alt="Logo of Grenoble Ecole De Management"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/ESC.png" alt="Logo of ESC - Clermont Business School"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/MBS.png" alt="Logo of MBS - Montpeiller Business School"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PAA.png" alt="Logo of Paris American Academy"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PSB.png" alt="Logo of Paris School of Business"></a>
 
       <a class="uni_button" href="Contact-us.html">
         <button class="buttonStyle2"><i class="fas fa-phone-alt"></i>Contact Us</button>
@@ -224,7 +228,7 @@
     <div class="headline2">
       <h2>Service Price You Can Choose</h2>
     </div>
-    <img id="school" src="assets/images/landing/school.png">
+    <img id="school" src="assets/images/landing/school.png" alt="Your future school">
     <img src="assets/images/landing/prices.png" alt="prices">
   </section>
 
@@ -233,7 +237,7 @@
       <h2>Reviews from our customers</h2>
     </div>
     <div class="review" style="justify-self: end;">
-      <img src="assets/images/landing/review1.png">
+      <img src="assets/images/landing/review1.png" alt="Person">
       <h3>Kristoff Jameson, 22</h3>
       <p>“FROM California: My experience with ESS was
         great. They helped me with all the documentation
@@ -243,7 +247,7 @@
       </p>
     </div>
     <div class="review">
-      <img src="assets/images/landing/review2.png">
+      <img src="assets/images/landing/review2.png" alt="Person">
       <h3>Andrea Elwyn, 24</h3>
       <p>“FROM Canada: I found ESS agency more
         experience, professional & dedicated. Their
@@ -252,7 +256,7 @@
         my previous qualifications. ”</p>
     </div>
     <div class="review" style="justify-self: start;">
-      <img src="assets/images/landing/review3.png">
+      <img src="assets/images/landing/review3.png" alt="Person">
       <h3>James Robertson, 23</h3>
       <p>“FROM Washington: Communcation with agency
         was very kind and helpful in every way.
