--- a/service.html
+++ b/service.html
@@ -10,6 +10,10 @@
     <link href="assets/css/service.css" rel=" stylesheet">
     <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
     <script src="assets/js/Java.js" defer></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
     <title>ESS</title>
 </head>
 
