--- a/universities.html
+++ b/universities.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="assets/css/style-universities.css" rel="stylesheet">
     <script src="assets/js/university.js" defer></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
     <title>Universities</title>
 
     <script
