--- a/Contact-us.html
+++ b/Contact-us.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-    <title> Contact Us </title>
+    <title>ESS - Contact Us </title>
 </head>
 
 <body>
