--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
   </style>
-  <title>Project Study</title>
+  <title>European Study Solution</title>
 </head>
 
 <body>
