--- a/universities.html
+++ b/universities.html
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-    <title>Universities</title>
+    <title>ESS - Universities</title>
 
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1SOTD5Zr8pOKdZ9jYpb_g8I-Gy1FsJac&callback=initMap&libraries=&v=weekly"
