metadata in each page

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Study in Europe, European STudy Solution, tuition price in Europe, study agencies, study in France"
+        content="HTML, CSS, JavaScript">
+    <meta
+        name="EUROPEAN STUDY SOLUTION- your trusted education agent - we make it easy. Chat to our education consultants 
+        today and be one of the thousands of students a year we help with studying abroad."
+        content="Free Web tutorials">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
     <link href="assets/CSS/style-contact.css" rel=" stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <title>ESS - Contact Us </title>
 </head>
@@ -67,10 +73,10 @@
 
             <section class="contact-intro">
                 <h3>CONTACT US</h3>
-                <p>Feel free to contact us if you have any questions! We have a 
+                <p>Feel free to contact us if you have any questions! We have a
                     helpful and prestisiouse team ready to help and to clarify anything you want!
-                    We are here to help you to find the best solutions for you and for your future. 
-                    </p>
+                    We are here to help you to find the best solutions for you and for your future.
+                </p>
 
                 <button class="buttonStyle1" onclick="document.getElementById('form-page').scrollIntoView();"><i
                         class="fas fa-phone-alt"></i>Contact Us</button>
@@ -121,7 +127,8 @@
                             <h4> Dasha Malevka </h4>
                             <p> Dasha is the owner of ESS Agency and has been a part of the team since founding the
                                 agency
-                                in 2019.<br> “The reason why I decided to establish ESS is that, I love to help students to
+                                in 2019.<br> “The reason why I decided to establish ESS is that, I love to help students
+                                to
                                 pursue their goals towards high-education. I would love to help you with an
                                 applications!”</p>
                         </article>
@@ -136,7 +143,8 @@
                             <p> Martin is a main agency group member responsible for communication with universities.
                                 <br>“I´m native American, who decided to study abroad, so I do really know what problems
                                 with applications you might face. Thats why I decided to join Dasha, and establish this
-                                great opportunity! ” </p>
+                                great opportunity! ”
+                            </p>
                         </article>
 
                     </div>
@@ -195,8 +203,8 @@
 
     </div>
 
-      <!----------------------------------Footer -------------------------->
-      <footer>
+    <!----------------------------------Footer -------------------------->
+    <footer>
         <div class="footer-content">
             <div class="footer-left">
                 <h4><b>Our Services</b></h4>
@@ -207,9 +215,10 @@
                     <br> <a href="service.html">Accomodation</a>
                 </p>
                 <br>
-                <button class="buttonStyle1" onClick="location.href='Contact-us.html'"><i class="fas fa-phone-alt"></i>Contact Us</button></a></li>
+                <button class="buttonStyle1" onClick="location.href='Contact-us.html'"><i
+                        class="fas fa-phone-alt"></i>Contact Us</button></a></li>
             </div>
-    
+
             <div class="footer-center">
                 <h4><b> Contact Us </b></h4>
                 <p><b>Telephone:</b>
@@ -221,14 +230,14 @@
                     <br> New York, NY 10005
                 </p>
             </div>
-    
+
             <div class="footer-right">
                 <h4><b>Study Abroad</b> </h4>
                 <p>Why study abroad
                     <br><a href="index.html#steps">Steps to study abroad</a>
-                    <br><a  href="index.html#FAQ">FAQs</a>
+                    <br><a href="index.html#FAQ">FAQs</a>
                     <br>Ready to apply
-                    <br><a  href="index.html#reviews">Reviews</a>
+                    <br><a href="index.html#reviews">Reviews</a>
                 </p>
             </div>
         </div>
