--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta
+    name="Study in Europe, European STudy Solution, tuition price in Europe, study agencies, study Programs in France"
+    content="HTML, CSS, JavaScript">
+  <meta
+    name="EUROPEAN STUDY SOLUTION- your trusted education agent - we make it easy. Chat to our education consultants today and be one of the thousands of students a year we help with studying abroad."
+    content="Free Web tutorials">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
   <link href="assets/CSS/style-index.css" rel=" stylesheet">
@@ -79,9 +85,9 @@
         our education consultants today and be one of the thousands of students a year we help with studying abroad.</p>
     </div>
     <div class="landing-contact-button">
-    <a href="Contact-us.html">
-      <button class="buttonStyle2"><i class="fas fa-phone-alt"></i>Contact Us</button>
-    </a>
+      <a href="Contact-us.html">
+        <button class="buttonStyle2"><i class="fas fa-phone-alt"></i>Contact Us</button>
+      </a>
     </div>
     <div class="arrow bounce"></div>
   </div>
@@ -202,7 +208,7 @@
       Tuition fees at public universities in France
       have variable prices, depending on your chosen
       study level. For Bachelor's programmes, the average
-      tuition fees are around 170 EUR per year. So when we 
+      tuition fees are around 170 EUR per year. So when we
       add all prices for accommodation and living by itself
       we can get to 10 000$ per one year.</p>
   </section>
@@ -212,11 +218,16 @@
       <div class="headline_uni">
         <h2>Partner Universities</h2>
       </div>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/GEM.png" alt="Logo of Grenoble Ecole De Management"></a>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/ESC.png" alt="Logo of ESC - Clermont Business School"></a>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/MBS.png" alt="Logo of MBS - Montpeiller Business School"></a>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PAA.png" alt="Logo of Paris American Academy"></a>
-      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PSB.png" alt="Logo of Paris School of Business"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/GEM.png"
+          alt="Logo of Grenoble Ecole De Management"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/ESC.png"
+          alt="Logo of ESC - Clermont Business School"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/MBS.png"
+          alt="Logo of MBS - Montpeiller Business School"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PAA.png"
+          alt="Logo of Paris American Academy"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PSB.png"
+          alt="Logo of Paris School of Business"></a>
 
       <a class="uni_button" href="Contact-us.html">
         <button class="buttonStyle2"><i class="fas fa-phone-alt"></i>Contact Us</button>
