--- a/service.html
+++ b/service.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Study in Europe, European STudy Solution, tuition price in Europe, study agencies"
+        content="HTML, CSS, JavaScript">
+    <meta
+        name="EUROPEAN STUDY SOLUTION- your trusted education agent - we make it easy. Chat to our education consultants today and be one of the thousands of students a year we help with studying abroad."
+        content="Free Web tutorials">
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
     <link href="assets/css/service.css" rel=" stylesheet">
