--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     </div>
 
     <div class="questionr">
-      <button onclick="showAns1()" class="faq_button1"><img src="assets/images/landing/+.png"></button>
+      <button onclick="showAns1()" class="faq_button1"><img src="assets/images/landing/plus.png"></button>
       <p>What is included in the Price ?</p>
       <div id="answer1">
         <p>"There are 3 packages to choose from. You can see them above."</p>
@@ -293,7 +293,7 @@
     </div>
 
     <div class="questionl">
-      <button onclick="showAns2()" class="faq_button2"><img src="assets/images/landing/+.png"></button>
+      <button onclick="showAns2()" class="faq_button2"><img src="assets/images/landing/plus.png"></button>
       <p>How will the process go ? </p>
       <div id="answer2">
         <p>"Step 1 - Contact us
@@ -310,7 +310,7 @@
     </div>
 
     <div class="questionr">
-      <button onclick="showAns3()" class="faq_button3"><img src="assets/images/landing/+.png"></button>
+      <button onclick="showAns3()" class="faq_button3"><img src="assets/images/landing/plus.png"></button>
       <p>What happens after I get accepted into the university ?</p>
       <div id="answer3">
         <p>"Visa Process, search for accommodation and departure abroad."</p>
@@ -319,7 +319,7 @@
     </div>
 
     <div class="questionl">
-      <button onclick="showAns4()" class="faq_button4"><img src="assets/images/landing/+.png"></button>
+      <button onclick="showAns4()" class="faq_button4"><img src="assets/images/landing/plus.png"></button>
       <p>How do I get my visa ?</p>
       <div id="answer4">
         <p>"There is a whole Application Process that we are very willing to help you with."</p>
@@ -328,7 +328,7 @@
     </div>
 
     <div class="questionr">
-      <button onclick="showAns5()" class="faq_button5"><img src="assets/images/landing/+.png"></button>
+      <button onclick="showAns5()" class="faq_button5"><img src="assets/images/landing/plus.png"></button>
       <p> How can I start?</p>
       <div id="answer5">
         <p>"Contact us and we’ll start the process together."</p>
@@ -337,7 +337,7 @@
     </div>
 
     <div class="questionl">
-      <button onclick="showAns6()" class="faq_button6"><img src="assets/images/landing/+.png"></button>
+      <button onclick="showAns6()" class="faq_button6"><img src="assets/images/landing/plus.png"></button>
       <p>Can I get a scholarship?</p>
       <div id="answer6">
         <p>"French public institutes and the Erasmus+ programme offer a large number of scholarships for foreign
@@ -346,7 +346,7 @@
 
     </div>
     <div class="questionr">
-      <button onclick="showAns7()" class="faq_button7"><img src="assets/images/landing/+.png"></button>
+      <button onclick="showAns7()" class="faq_button7"><img src="assets/images/landing/plus.png"></button>
       <p>Are European Diplomas Globally recognized?</p>
       <div id="answer7">
         <p>"Yes, it is Globally recognizable"</p>
@@ -354,7 +354,7 @@
 
     </div>
     <div class="questionl">
-      <button onclick="showAns8()" class="faq_button8"><img src="assets/images/landing/+.png"></button>
+      <button onclick="showAns8()" class="faq_button8"><img src="assets/images/landing/plus.png"></button>
       <p>Will I be allowed to work there?</p>
       <div id="answer8">
         <p>"Yes. Every student can work there."</p>
