--- a/universities.html
+++ b/universities.html
@@ -75,9 +75,10 @@
 
         <article class="introtext">
             <h3>UNIVERSITIES</h3>
-            <p>Our Service provide all needed step to be accepted to the university. We will help you from the begging
-                till the end, with all the requirements you might need for filling university application, accomodation
-                and visa.</p>
+            <p>Our Agency callobarates with France Univerities, which can offer
+                high quality programs and international
+                environment for unforgettable study years. You can check the available universities and programs under.
+            </p>
 
             <a href="Contact-us.html">
                 <button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact Us</button>
