--- a/Contact-us.html
+++ b/Contact-us.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Study in Europe, European STudy Solution, tuition price in Europe, study agencies, study in France"
         content="HTML, CSS, JavaScript">
-    <meta
-        name="EUROPEAN STUDY SOLUTION- your trusted education agent - we make it easy. Chat to our education consultants 
+    <meta name="EUROPEAN STUDY SOLUTION- your trusted education agent - we make it easy. Chat to our education consultants 
         today and be one of the thousands of students a year we help with studying abroad."
         content="Free Web tutorials">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
@@ -112,7 +111,7 @@
                 </p>
             </div>
 
-            <div class="side-team">
+            <div class="side-team" id="ContactUS">
 
                 <div class="team">
                     <h3> European Study Solution team</h3>
@@ -219,15 +218,19 @@
                         class="fas fa-phone-alt"></i>Contact Us</button></a></li>
             </div>
 
+
             <div class="footer-center">
                 <h4><b> Contact Us </b></h4>
-                <p><b>Telephone:</b>
-                    <br>+380972841850
-                    <br>
-                    <br><b>Address:</b>
-                    <br>120 Wall Street
-                    <br>Floor 4
-                    <br> New York, NY 10005
+                <a href="Contact-us.html#ContactUS">
+                    <p> Our Team <br>
+                </a>
+                <b>Telephone:</b>
+                <br>+380972841850
+                <br>
+                <b>Address:</b>
+                <br>120 Wall Street
+                <br>Floor 4
+                <br> New York, NY 10005
                 </p>
             </div>
 
