--- a/index.html
+++ b/index.html
@@ -375,22 +375,26 @@
           <br> <a href="service.html">Accomodation</a>
         </p>
         <br>
-        <button class="buttonStyle1" onClick="location.href='Contact-us.html'"><i class="fas fa-phone-alt"></i>Contact
+        <button class="buttonStyle1" id="button-main" onClick="location.href='Contact-us.html'"><i
+            class="fas fa-phone-alt"></i>Contact
           Us</button></a></li>
       </div>
 
+
       <div class="footer-center">
         <h4><b> Contact Us </b></h4>
-        <p><b>Telephone:</b>
-          <br>+380972841850
-          <br>
-          <br><b>Address:</b>
-          <br>120 Wall Street
-          <br>Floor 4
-          <br> New York, NY 10005
+        <a href="Contact-us.html#ContactUS">
+          <p> Our Team <br>
+        </a>
+        <b>Telephone:</b>
+        <br>+380972841850
+        <br>
+        <b>Address:</b>
+        <br>120 Wall Street
+        <br>Floor 4
+        <br> New York, NY 10005
         </p>
       </div>
-
       <div class="footer-right">
         <h4><b>Study Abroad</b> </h4>
         <p>Why study abroad
