--- a/service.html
+++ b/service.html
@@ -439,13 +439,16 @@
 
             <div class="footer-center">
                 <h4><b> Contact Us </b></h4>
-                <p><b>Telephone:</b>
-                    <br>+380972841850
-                    <br>
-                    <br><b>Address:</b>
-                    <br>120 Wall Street
-                    <br>Floor 4
-                    <br> New York, NY 10005
+                <a href="Contact-us.html#ContactUS">
+                    <p> Our Team <br>
+                </a>
+                <b>Telephone:</b>
+                <br>+380972841850
+                <br>
+                <b>Address:</b>
+                <br>120 Wall Street
+                <br>Floor 4
+                <br> New York, NY 10005
                 </p>
             </div>
 
