--- a/universities.html
+++ b/universities.html
@@ -81,7 +81,7 @@
             </p>
 
             <a href="Contact-us.html">
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact Us</button>
+                <button class="buttonStyle1" id="button-main"><i class="fas fa-phone-alt"></i>Contact Us</button>
             </a>
 
         </article>
@@ -983,15 +983,19 @@
                         class="fas fa-phone-alt"></i>Contact Us</button></a></li>
             </div>
 
+
             <div class="footer-center">
                 <h4><b> Contact Us </b></h4>
-                <p><b>Telephone:</b>
-                    <br>+380972841850
-                    <br>
-                    <br><b>Address:</b>
-                    <br>120 Wall Street
-                    <br>Floor 4
-                    <br> New York, NY 10005
+                <a href="Contact-us.html#ContactUS">
+                    <p> Our Team <br>
+                </a>
+                <b>Telephone:</b>
+                <br>+380972841850
+                <br>
+                <b>Address:</b>
+                <br>120 Wall Street
+                <br>Floor 4
+                <br> New York, NY 10005
                 </p>
             </div>
 
